--- a/index.html
+++ b/index.html
@@ -1,28 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Yoshyn</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Yoshyn!</h1>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:sylvestre.antoine+github@gmail.com">email</a></li>
-        		<li><a href="https://github.com/Yoshyn">github.com/Yoshyn</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Yoshyn, Sample Github Page
+---
+<div class="blurb">
+	<h1>Hi there, I'm Yoshyn!</h1>
+	<p>I'm simply trying github Page. It's seem awesome ! <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
