Rewrite from scratch with jekyll

--- a/index.html
+++ b/index.html
@@ -1,8 +1,55 @@
 ---
 layout: default
-title: Yoshyn, Sample Github Page
 ---
-<div class="blurb">
-	<h1>Hi there, I'm Yoshyn!</h1>
-	<p>I'm simply trying github Page. It's seem awesome ! <a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+
+<div class="home">
+
+  <div class="row marketing">
+    <div class="col-sm-4" itemscope itemtype="http://http://schema.org/Person" class="with-photo">
+      <img class="img-circle avatar" alt="Sylvestre Antoine" src="assets/images/s_antoine.jpeg">
+      <ul class="social-media-list text-center">
+        <li><a href="mailto:sylvestre[dot]antoine[at]gmail.com">
+          <span style="color:gray" class="glyphicon glyphicon-envelope"></span>
+          <span>sylvestre.antoine[at]gmail.com</span>
+          </a>
+        </li>
+
+
+        <li><a href="https://github.com/yoshyn" itemprop="url" title="github">
+          <span class="icon  icon--github">
+            <svg viewBox="0 0 16 16">
+              <path fill="#828282" d="M7.999,0.431c-4.285,0-7.76,3.474-7.76,7.761 c0,3.428,2.223,6.337,5.307,7.363c0.388,0.071,0.53-0.168,0.53-0.374c0-0.184-0.007-0.672-0.01-1.32 c-2.159,0.469-2.614-1.04-2.614-1.04c-0.353-0.896-0.862-1.135-0.862-1.135c-0.705-0.481,0.053-0.472,0.053-0.472 c0.779,0.055,1.189,0.8,1.189,0.8c0.692,1.186,1.816,0.843,2.258,0.645c0.071-0.502,0.271-0.843,0.493-1.037 C4.86,11.425,3.049,10.76,3.049,7.786c0-0.847,0.302-1.54,0.799-2.082C3.768,5.507,3.501,4.718,3.924,3.65 c0,0,0.652-0.209,2.134,0.796C6.677,4.273,7.34,4.187,8,4.184c0.659,0.003,1.323,0.089,1.943,0.261 c1.482-1.004,2.132-0.796,2.132-0.796c0.423,1.068,0.157,1.857,0.077,2.054c0.497,0.542,0.798,1.235,0.798,2.082 c0,2.981-1.814,3.637-3.543,3.829c0.279,0.24,0.527,0.713,0.527,1.437c0,1.037-0.01,1.874-0.01,2.129 c0,0.208,0.14,0.449,0.534,0.373c3.081-1.028,5.302-3.935,5.302-7.362C15.76,3.906,12.285,0.431,7.999,0.431z"/>
+            </svg>
+          </span>
+          <span class="username">yoshyn</span>
+          </a></li>
+        <li itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+          <span itemprop="addressLocality">Paris</span>,
+          <span itemprop="addressCountry">France</span>
+        </li>
+      </ul>
+    </div>
+    <div class="col-sm-8">
+      <p class="lead">Hi, I'm Sylvestre, a web Software developer since 2011.</p>
+      <p>Passionate about programming and computer security, I grant a special interest in ethical issues relating to the ownership of electronic data.</p>
+      <p>I work following the <a href="en.wikipedia.org/wiki/KISS_principle", title="KISS">Keep it simple, stupid</a> principle.</p>
+      <p>Curious, I like to discover and learn new IT tools and technologies.</p>
+      <p>I am also fond of hiking and traveling.</p>
+
+      <p> Some of my skills: </p>
+      <ul>
+        <li>Ruby & Ruby on Rails</li>
+        <li>PHP</li>
+        <li>SQL</li>
+        <li>C++</li>
+        <li>SysAdmin ( Routing, dns, dhcp, shell, Apache, Debian ...)</li>
+        <li>And many others things i forgot !</li>
+      </ul>
+
+      <p>I'm available for hire. Drop me a message about your project if you're interested in working with me.</p>
+    </div>
+  </div>
+
+</div>
+
+
