--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ layout: default
         <li>And many others things i forgot !</li>
       </ul>
 
-      <p>I'm available for hire. Drop me a message about your project if you're interested in working with me.</p>
+      <p>Drop me a message about your project if you're interested in working with me.</p>
     </div>
   </div>
 
