--- a/cv/index.html
+++ b/cv/index.html
@@ -49,6 +49,17 @@
     <section id="experience" class="level2">
       <h2>Experience</h2>
       <dl>
+        <dt>03/2015 - Today</dt>
+        <dd><p><strong>Software Engineer</strong>, <em>Superimmo</em>, Paris, France</p>
+          <p>Migrate a web platform from PHP to Rails (back & front-end jobs).</p>
+          <dl>
+            <dt>Website</dt>
+            <dd><a href="http://www.superimmoneuf.com/" class="uri" target="_blank">http://www.superimmoneuf.com/</a>
+            </dd>
+            <dt>Keywords</dt>
+            <dd>Rails, ruby, Sidekiq, Elasticsearch, Ruby, AWS (S3,SES, SNS), ETL</dd>
+          </dl>
+        </dd>
         <dt>10/2014 - 02/2015</dt>
         <dd><p><strong>Software Engineer</strong>, <em>FollowAnalytics</em>, Paris, France</p>
           <p>Participation to the migration of a big data set (over 70M rows) from Mongo to Redshift</p>
