--- a/cv/index.html
+++ b/cv/index.html
@@ -15,8 +15,8 @@
     <header itemscope itemtype="http://http://schema.org/Person" class="with-photo">
       <div id="title" class="">
         <h1 class="fullname">
-          <span itemprop="givenName">Antoine</span>
-          <span itemprop="familyName">Sylvestre</span>
+          <span itemprop="familyName">Antoine</span>
+          <span itemprop="givenName">Sylvestre</span>
         </h1>
         <h2 class="title">Web Software developer</h2>
       </div>
