--- a/cv/index.html
+++ b/cv/index.html
@@ -49,7 +49,18 @@
     <section id="experience" class="level2">
       <h2>Experience</h2>
       <dl>
-        <dt>03/2015 - Today</dt>
+        <dt>04/2015 - 07/2017</dt>
+        <dd><p><strong>Software Engineer</strong>, <em>Skillsoft</em>, Paris, France</p>
+          <p>Back-end developer for an e-learning platform.</p>
+          <dl>
+            <dt>Website</dt>
+            <dd><a href="https://www.skillsoft.com/" class="uri" target="_blank">https://www.skillsoft.com/</a>
+            </dd>
+            <dt>Keywords</dt>
+            <dd>API, ruby, Elixir, docker, kubernetes</dd>
+          </dl>
+        </dd>
+        <dt>03/2015 - 04/2017</dt>
         <dd><p><strong>Software Engineer</strong>, <em>Superimmo</em>, Paris, France</p>
           <p>Migrate a web platform from PHP to Rails (back & front-end jobs).</p>
           <dl>
