--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@ layout: default
     <div class="col-sm-4" itemscope itemtype="http://http://schema.org/Person" class="with-photo">
       <img class="img-circle avatar" alt="Sylvestre Antoine" src="assets/images/s_antoine.jpeg">
       <ul class="social-media-list text-center">
-        <li><a href="mailto:sylvestre[dot]antoine[at]gmail.com">
+        <li><a href="mailto:sylvestre[dot]antoine+githubio[at]gmail.com">
           <span style="color:gray" class="glyphicon glyphicon-envelope"></span>
-          <span>sylvestre.antoine[at]gmail.com</span>
+          <span>sylvestre.antoine+githubio[at]gmail.com</span>
           </a>
         </li>
-
 
         <li><a href="https://github.com/yoshyn" itemprop="url" title="github">
           <span class="icon  icon--github">
@@ -39,14 +38,14 @@ layout: default
       <p> Some of my skills: </p>
       <ul>
         <li>Ruby & Ruby on Rails</li>
-        <li>PHP</li>
         <li>SQL</li>
         <li>C++</li>
         <li>SysAdmin ( Routing, dns, dhcp, shell, Apache, Debian ...)</li>
-        <li>And many others things i forgot !</li>
+        <li>And many others things i forgot. Check my CV !</li>
       </ul>
 
       <p>Drop me a message about your project if you're interested in working with me.</p>
+      <p>I follow <a href="http://sl4.org/crocker.html" itemprop="url" title="croker_s_rules">Crocker's Rules</a>. No need to be too diplomatic by email.</p>
     </div>
   </div>
 
