--- a/cv/index.html
+++ b/cv/index.html
@@ -26,7 +26,7 @@
         <!-- mobile -->
         <!-- fax -->
         <!-- email -->
-        <li><a href="mailto:sylvestre[dot]antoine[at]gmail.com">sylvestre[dot]antoine[at]gmail.com</a></li>
+        <li><a href="mailto:sylvestre[dot]antoine[at]gmail.com">Email me</a></li>
         <!-- homepage -->
         <li><a href="http://yoshyn.github.io" itemprop="url" title="homepage">http://yoshyn.github.io</a></li>
         <!--if(address)-->
