--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
       </ul>
     </div>
     <div class="col-sm-8">
-      <p class="lead">Hi, I'm Sylvestre, a web Software developer since 2011.</p>
+      <p class="lead">Hi, I'm Sylvestre, a Software Engineer since 2011.</p>
       <p>Passionate about programming and computer security, I grant a special interest in ethical issues relating to the ownership of electronic data.</p>
       <p>I work following the <a href="en.wikipedia.org/wiki/KISS_principle", title="KISS">Keep it simple, stupid</a> principle.</p>
       <p>Curious, I like to discover and learn new IT tools and technologies.</p>
