--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
       <ul class="social-media-list text-center">
         <li><a href="mailto:sylvestre[dot]antoine+githubio[at]gmail.com">
           <span style="color:gray" class="glyphicon glyphicon-envelope"></span>
-          <span>sylvestre.antoine+githubio[at]gmail.com</span>
+          <span>Email me</span>
           </a>
         </li>
 
