--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ layout: default
           <span>Email me</span>
           </a>
         </li>
+        <li><img src="https://www.codewars.com/users/Yoshyn/badges/micro" /></li>
 
         <li><a href="https://github.com/yoshyn" itemprop="url" title="github">
           <span class="icon  icon--github">
