--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@ layout: default
           <span>Email me</span>
           </a>
         </li>
-        <li><img src="https://www.codewars.com/users/Yoshyn/badges/micro" /></li>
-
         <li><a href="https://github.com/yoshyn" itemprop="url" title="github">
           <span class="icon  icon--github">
             <svg viewBox="0 0 16 16">
@@ -27,6 +25,7 @@ layout: default
           <span itemprop="addressLocality">Paris</span>,
           <span itemprop="addressCountry">France</span>
         </li>
+        <li><a target="_blank" href="https://www.codewars.com/users/Yoshyn"><img src="https://www.codewars.com/users/Yoshyn/badges/micro" alt="codewars badge small" /></a>
       </ul>
     </div>
     <div class="col-sm-8">
