--- a/index.html
+++ b/index.html
@@ -44,7 +44,15 @@ layout: default
         <li>And many others things i forgot. Check my CV !</li>
       </ul>
 
-      <p>Drop me a message about your project if you're interested in working with me.</p>
+      <p>
+        I'm not looking for a job but feel free to drop me a message about your project if you're interested in working with me.
+        <br />
+        However, I will only give respond to offers that: <br />
+          * Specifies a pay range.<br />
+          * Specifies schedules.<br />
+          * Don't mention bull-shit words like "ninja".<br />
+          * Believe that I'm a Front-End developer.<br />
+      </p>
       <p>I follow <a href="http://sl4.org/crocker.html" itemprop="url" title="croker_s_rules">Crocker's Rules</a>. No need to be too diplomatic by email.</p>
     </div>
   </div>
